--- a/_posts/2021-01-26-dataviz-makeove-1/dataviz-makeove-1.Rmd
+++ b/_posts/2021-01-26-dataviz-makeove-1/dataviz-makeove-1.Rmd
@@ -7,6 +7,8 @@ author:
   - name: Su Yiin Ang
     url: https://public.tableau.com/profile/suyiinang
 date: 01-26-2021
+categories:
+  - DataViz Makeover
 output:
   distill::distill_article:
     self_contained: false
@@ -22,7 +24,7 @@ For my first DataViz makeover, I have used data from the [Ministry of Manpower o
 
 # 1) The original visualisation
 
-```{r, fig.cap = "Chart 6 of Labour Force in Singapore 2019 report (page 22)", out.width = "100%"}
+```{r, fig.cap = "Chart 6 of Labour Force in Singapore 2019 report (page 22)", out.width = "50%"}
 knitr::include_graphics("images/fig1.png")
 ```
 
@@ -76,20 +78,20 @@ from the [Ministry of Manpower of Singapore](https://stats.mom.gov.sg/Pages/Labo
 **Data: Table 5 - LFPR**
 
 1) Remove unnecessary columns  
-Delete columns A, B, D, F, H, J, L, M, N, P, R, T, V, X, Z.
-```{r, fig.cap = "Remove unnecessary columns", out.width = "100%"}
+Delete columns A, B, D, F, H, J, L, M, N, P, R, T, V, X, Z.  
+```{r, fig.cap = "Remove unnecessary columns", out.width = "30%"}
 knitr::include_graphics("images/fig3.png")
 ```
 
 2) Remove empty rows  
 Delete rows 1 to 4 and 19.
-```{r, fig.cap = "Remove empty rows", out.width = "100%"}
+```{r, fig.cap = "Remove empty rows", out.width = "30%"}
 knitr::include_graphics("images/fig4.png")
 ```
 
 3) Rename header  
 Rename header from “Age (Years)” to “Age band”.
-```{r, fig.cap = "Rename header", out.width = "100%"}
+```{r, fig.cap = "Rename header", out.width = "30%"}
 knitr::include_graphics("images/fig5.png")
 ```
 
@@ -103,7 +105,7 @@ Repeat steps 1 to 4 as done for Table 5 above.
 
 2) Pivot data
 Import file into Tableau, select all the years, right click and select “Pivot”.
-```{r, fig.cap = "Pivot data", out.width = "100%"}
+```{r, fig.cap = "Pivot data", out.width = "30%"}
 knitr::include_graphics("images/fig6.png")
 ```
 
@@ -126,51 +128,51 @@ Import both T5_T_clean and T7_T_pivot into Tableau.
 **Data source tab - T5_T_clean**
 1) Import into Tableau & create flat file
 Inspect imported data: Upon importation, the LFPR from 2009 to 2019 are spread across multiple columns. As such, we want to create a flat file - select the columns from 2009 to 2019, right click and select pivot.
-```{r, fig.cap = "Create flat file", out.width = "100%"}
+```{r, fig.cap = "Create flat file", out.width = "30%"}
 knitr::include_graphics("images/fig8.png")
 ```
 
 2) Rename headers  
 Rename ‘Pivot Field Names’ to ‘Year’.  
 Rename ‘Pivot Field Values’ to ‘LFPR%’.  
-```{r, fig.cap = "Rename header", out.width = "100%"}
+```{r, fig.cap = "Rename header", out.width = "30%"}
 knitr::include_graphics("images/fig9.png")
 ```
 
-3) Change data type
-Change ‘Year’ data type from string to Date.
-```{r, fig.cap = "Change data type", out.width = "100%"}
+3) Change data type  
+Change ‘Year’ data type from string to Date.  
+```{r, fig.cap = "Change data type", out.width = "30%"}
 knitr::include_graphics("images/fig10.png")
 ```
 
-4) Import T7_T_pivot
+4) Import T7_T_pivot  
 Inspect imported data to ensure data is in flat file format and data types are correct.
 
-**LFPR% tab**
-1) Create line chart
-Drag [Year] and [LFPR%] to Columns and Rows respectively.
-```{r, fig.cap = "Create line chart", out.width = "50%"}
+**LFPR% tab**  
+1) Create line chart  
+Drag [Year] and [LFPR%] to Columns and Rows respectively.  
+```{r, fig.cap = "Create line chart", out.width = "30%"}
 knitr::include_graphics("images/fig11.png")
 ```
 
-2) Apply filter 
+2) Apply filter  
 Drag [Age band] to Filters panel, and check these 4 values: 15- 24, 25-54, 55-64, 65+.  
-```{r, fig.cap = "Apply filter", out.width = "50%"}
+```{r, fig.cap = "Apply filter", out.width = "30%"}
 knitr::include_graphics("images/fig12.png")
 ```
 
 3) Apply colour  
 Drag [Age band] to colour, change colours according to figure 13.  
 Update ‘Automatic’ to ‘Line’.  
-```{r, fig.cap = "Apply colour", out.width = "50%"}
+```{r, fig.cap = "Apply colour", out.width = "30%"}
 knitr::include_graphics("images/fig13.png")
 ```
 
 4) Update view  
 Update view from ‘Standard’ to ‘Entire View’.
 
-5) Add annotation
-I only want to highlight points on 2009 and 2019. Hence for points on  
+5) Add annotation  
+I only want to highlight points on 2009 and 2019. Hence for points on
     -	2009: Right click on each of the points (4 in total) and select Annotate > Point. In the “Edit Annotation” panel, write “<SUM(LFPR%)>%” and colour font according to the age band colour done previously.  
     -	2019: Right click on each of the points (4 in total) and select Annotate > Point. In the “Edit Annotation” panel, write “<Age band> <SUM(LFPR%)>%” and colour font according to the age band colour done previously.
 
@@ -184,11 +186,11 @@ Rename y-axis to “Labour Force Participation Rate (LFPR%)”.
 Add title: More Singapore residents across all age groups work. *<font size 14>*  
 However, the increase in older workers' (55-64 and 65+) participation rate of 9ppt and 11.6ppt was triple that of younger workers' (15 - 24 and 25 - 54) of 3.6ppt and 3.3ppt! *<font size 10>*
 
-**Share of LP**
+**Share of LP**  
 1) Create new age band group  
 Right click [Age band] > Create > Group.  
 Group and rename according to figure below.  
-```{r, fig.cap = "Create new age band group", out.width = "100%"}
+```{r, fig.cap = "Create new age band group", out.width = "20%"}
 knitr::include_graphics("images/fig14.png")
 ```
 
@@ -201,7 +203,7 @@ Reduce opacity to “60%".
 Drag [Labour force] and [Year1] to Columns and Rows respectively.  
 Convert to percentage : Right click [SUM(Labour force)] > Quick Table Calculation > Percent of Total.  
 Convert to stacked bar : Right click [SUM(Labour force)] > Compute using > Age band (group).
-```{r, fig.cap = "Create stacked bar chart", out.width = "100%"}
+```{r, fig.cap = "Create stacked bar chart", out.width = "30%"}
 knitr::include_graphics("images/fig15.png")
 ```
 
@@ -217,14 +219,14 @@ Using Format Lines panel.
 
 7) Add annotation  
 Drag mouse pointer and select the 2009 and 2019 bars > right click > Mark labels > Always show.
-```{r, fig.cap = "", out.width = "100%"}
+```{r, fig.cap = "Add annotation", out.width = "30%"}
 knitr::include_graphics("images/fig16.png")
 ```
 
 8) Add title  
 Add title : Singapore's labour force gets older.The median age has increased from 41 in 2009 to 44 in 2019 due to the gradual shift towards older workers (55-64 and 65+ band) over the past 10 years.
 
-**Dashboard 1**
+**Dashboard 1**  
 1) Add title  
 Add title : “The shift in Singapore's labour force distribution and participation rate by age bands 2009 to 2019” with grey background, white text and font size 23.
 
