--- a/_posts/2021-01-26-dataviz-makeove-1/dataviz-makeove-1.Rmd
+++ b/_posts/2021-01-26-dataviz-makeove-1/dataviz-makeove-1.Rmd
@@ -22,18 +22,17 @@ knitr::opts_chunk$set(echo = FALSE)
 
 For my first DataViz makeover, I have used data from the [Ministry of Manpower of Singapore](https://stats.mom.gov.sg/Pages/Labour-Force-In-Singapore-2019.aspx), which analyses Singapore’s labour force to understand shifts in the labour market to facilitate better decision making.  
 
-# 1) The original visualisation
+## 1) The original visualisation
 
-```{r, fig.cap = "Chart 6 of Labour Force in Singapore 2019 report (page 22)", out.width = "50%"}
-knitr::include_graphics("images/fig1.png")
-```
+![:scale 60%](images/fig1.png)
+*Figure 1: Chart 6 of Labour Force in Singapore 2019 report (page 22)*
 
 Before making over the selected visualisation, it is important to have a clear understanding of the context of the visualisation and its key takeaway which is depend on:  
 - **Who**: Individuals, businesses and primarily policy-makers to help improve the well-being and optimisation of workers.  
 - **What**: Understanding the shift in Singapore’s labour force from the respective age bands over the past 10 years (2009 to 2019).  
 -	**How**: Showing that labour force distribution and participation rate of older workers (55 and over) has increased, which resulted in the increase in labour force’s median age.
 
-# 2) Critiques and suggestions for current visualisation
+## 2) Critiques and suggestions for current visualisation
 ### 2.1 Clarity
 
 
@@ -54,11 +53,11 @@ S/N | Critiques                     | Comments
 9   | **The heavy shading of the table competes for attention.** The table is meant to support the main message hence shading should be kept minimal.Furthermore, the monotone shading does not add value (unlike a heat map which showcases the increase/decrease trends in values). | Remove shading. Colour should always be intentional - use shading only to highlight key figures.
 10  | **Different alignments for source and notes** make the whole visualisation look disorganised. |	Align these two either to the left or right to establish sense of unity and cohesion.
 
-# 3) Proposed Design
+## 3) Proposed Design
 ### 3.1 Sketch
-```{r, fig.cap = "Sketch of proposed design", out.width="100%"}
-knitr::include_graphics("images/fig2.jpg")
-```
+![:scale 60%](images/fig2.jpg)
+*Figure 2: Sketch of proposed design*
+
 ### 3.2 Advantages of proposed design
 i)	Clear title – shows how the participation rate and distribution of Singapore’s labour force has shifted by age bands from 2009 to 2019.
 ii)	Chart titles tell the big picture story, followed up with short commentary to provide more context.
@@ -68,53 +67,50 @@ v)	Axis are properly labeled – LFPR% and share of labour force.
 vi)	Only selected figures (2009 and 2019) are shown to highlight the shift.
 vii)	Colours are consistent throughout the dashboard.   
 
-# 4) Data visualisation steps
+## 4) Data visualisation steps
 In remaking the existing visualisation, I used  
 i) Table 5 (Resident Labour Force Participation Rate by Age and Sex, 2009 - 2019), and  
 ii) Table 7 (Resident Labour Force Aged Fifteen Years and Over by Age and Sex, 2009 - 2019)  
 from the [Ministry of Manpower of Singapore](https://stats.mom.gov.sg/Pages/Labour-Force-Tables2019.aspx).
 
 ### 4.1 Data preparation
+
 **Data: Table 5 - LFPR**
 
 1) Remove unnecessary columns  
 Delete columns A, B, D, F, H, J, L, M, N, P, R, T, V, X, Z.  
-```{r, fig.cap = "Remove unnecessary columns", out.width = "30%"}
-knitr::include_graphics("images/fig3.png")
-```
+![:scale 60%](images/fig3.png)
+*Figure 3: Remove unnecessary columns*
 
 2) Remove empty rows  
 Delete rows 1 to 4 and 19.
-```{r, fig.cap = "Remove empty rows", out.width = "30%"}
-knitr::include_graphics("images/fig4.png")
-```
+![:scale 60%](images/fig4.png)
+*Figure 4: Remove empty rows*
 
 3) Rename header  
 Rename header from “Age (Years)” to “Age band”.
-```{r, fig.cap = "Rename header", out.width = "30%"}
-knitr::include_graphics("images/fig5.png")
-```
+![:scale 60%](images/fig5.png)
+*Figure 5: Rename header*
 
 4) Delete unnecessary tabs
 Remove tabs T5_F and T5_M.
 Save and rename file as T5_T_clean.
 
 **Data: Table 7 - Labour force**  
+
 1) Tidy data  
 Repeat steps 1 to 4 as done for Table 5 above.
 
 2) Pivot data  
 Import file into Tableau, select all the years, right click and select “Pivot”.
-```{r, fig.cap = "Pivot data", out.width = "30%"}
-knitr::include_graphics("images/fig6.png")
-```
+![:scale 60%](images/fig6.png)  
+*Figure 6: Pivot data*
 
 3) Rename headers  
 Rename ‘Pivot Field Names’ to ‘Year’.
 Rename ‘Pivot Field Values’ to ‘Labour force’.
-```{r, fig.cap = "Rename headers"}
-knitr::include_graphics("images/fig7.png")
-```
+![:scale 50%](images/fig7.png)  
+*Figure 7: Rename headers*
 
 4) Change data type  
 Change Year data type to “Date”.
@@ -126,47 +122,43 @@ Save file as "T7_T_pivot".
 Import both T5_T_clean and T7_T_pivot into Tableau.  
 
 **Data source tab - T5_T_clean**  
+
 1) Import into Tableau & create flat file  
 Inspect imported data: Upon importation, the LFPR from 2009 to 2019 are spread across multiple columns. As such, we want to create a flat file - select the columns from 2009 to 2019, right click and select pivot.
-```{r, fig.cap = "Create flat file", out.width = "30%"}
-knitr::include_graphics("images/fig8.png")
-```
+![:scale 60%](images/fig8.png)  
+*Figure 8: Pivot data*
 
 2) Rename headers  
 Rename ‘Pivot Field Names’ to ‘Year’.  
 Rename ‘Pivot Field Values’ to ‘LFPR%’.  
-```{r, fig.cap = "Rename header", out.width = "30%"}
-knitr::include_graphics("images/fig9.png")
-```
+![:scale 60%](images/fig9.png)  
+*Figure 9: Rename headers*
 
 3) Change data type  
 Change ‘Year’ data type from string to Date.  
-```{r, fig.cap = "Change data type", out.width = "30%"}
-knitr::include_graphics("images/fig10.png")
-```
+![:scale 60%](images/fig10.png)  
+*Figure 10: Change data type*
 
 4) Import T7_T_pivot  
 Inspect imported data to ensure data is in flat file format and data types are correct.
 
 **LFPR% tab**  
+
 1) Create line chart  
 Drag [Year] and [LFPR%] to Columns and Rows respectively.  
-```{r, fig.cap = "Create line chart", out.width = "30%"}
-knitr::include_graphics("images/fig11.png")
-```
+![:scale 30%](images/fig11.png)  
+*Figure 11: Create line chart*
 
 2) Apply filter  
 Drag [Age band] to Filters panel, and check these 4 values: 15- 24, 25-54, 55-64, 65+.  
-```{r, fig.cap = "Apply filter", out.width = "30%"}
-knitr::include_graphics("images/fig12.png")
-```
+![:scale 40%](images/fig12.png)  
+*Figure 12: Appy filter*
 
 3) Apply colour  
 Drag [Age band] to colour, change colours according to figure 13.  
 Update ‘Automatic’ to ‘Line’.  
-```{r, fig.cap = "Apply colour", out.width = "30%"}
-knitr::include_graphics("images/fig13.png")
-```
+![:scale 60%](images/fig13.png)  
+*Figure 13: Apply colour*
 
 4) Update view  
 Update view from ‘Standard’ to ‘Entire View’.
@@ -187,12 +179,12 @@ Add title: More Singapore residents across all age groups work. *<font size 14>*
 However, the increase in older workers' (55-64 and 65+) participation rate of 9ppt and 11.6ppt was triple that of younger workers' (15 - 24 and 25 - 54) of 3.6ppt and 3.3ppt! *<font size 10>*
 
 **Share of LP**  
+
 1) Create new age band group  
 Right click [Age band] > Create > Group.  
 Group and rename according to figure below.  
-```{r, fig.cap = "Create new age band group", out.width = "20%"}
-knitr::include_graphics("images/fig14.png")
-```
+![:scale 10%](images/fig14.png)  
+*Figure 14: Group age bands*
 
 2) Apply filter	Filter out “Total”  
 Add colour	Drag [Age band] to colour.  
@@ -202,10 +194,9 @@ Reduce opacity to “60%".
 3) Create stacked bar chart  
 Drag [Labour force] and [Year1] to Columns and Rows respectively.  
 Convert to percentage : Right click [SUM(Labour force)] > Quick Table Calculation > Percent of Total.  
-Convert to stacked bar : Right click [SUM(Labour force)] > Compute using > Age band (group).
-```{r, fig.cap = "Create stacked bar chart", out.width = "30%"}
-knitr::include_graphics("images/fig15.png")
-```
+Convert to stacked bar : Right click [SUM(Labour force)] > Compute using > Age band (group).  
+![:scale 30%](images/fig15.png)  
+*Figure 15: Create stacked bar chart*
 
 4) Change view  
 From “Standard” to “Fit height”.
@@ -218,15 +209,13 @@ Remove y-axis	Right click > Hide field labels for row.
 Using Format Lines panel.
 
 7) Add annotation  
-Drag mouse pointer and select the 2009 and 2019 bars > right click > Mark labels > Always show.
-```{r, fig.cap = "Add annotation", out.width = "30%"}
-knitr::include_graphics("images/fig16.png")
-```
+Drag mouse pointer and select the 2009 and 2019 bars > right click > Mark labels > Always show
 
 8) Add title  
 Add title : Singapore's labour force gets older.The median age has increased from 41 in 2009 to 44 in 2019 due to the gradual shift towards older workers (55-64 and 65+ band) over the past 10 years.
 
 **Dashboard 1**  
+
 1) Add title  
 Add title : “The shift in Singapore's labour force distribution and participation rate by age bands 2009 to 2019” with grey background, white text and font size 23.
 
@@ -246,13 +235,13 @@ The raw data: https://stats.mom.gov.sg/Pages/Labour-Force-Tables2019.aspx”
 5) Add author  
 Add text to bottom left corner and add text : “DataViz Makeover #1 by @suyiinang” align left.
 
-# 5) Final visualisation
-## 5.1 Snapboard of dashboard
-```{r, fig.cap = "Dashboard", out.width= "100%"}
-knitr::include_graphics("images/fig17.png")
-```
+## 5) Final visualisation
+### 5.1 Snapboard of dashboard  
+![](images/fig16.png)
+Figure 17: Dashboard  
+*Full visualisation available at [Tableau Public](https://public.tableau.com/profile/suyiinang#!/vizhome/DataViz_16116824631860/Dashboard1)*
 
-## 5.2 Main observations
+### 5.2 Main observations
 - Labour force participation rate (LFPR) has increased across all age bands. While younger workers (15 – 24 and 25 – 54) experienced a slight increase of 3.6ppt and 3.3ppt since 2009, the increase in older workers’ (55-64 and 65) participation was **triple** that of younger workers, increasing by 9ppt and 11.6ppt since 2009.
 - Participation rate of 15 -24 workers tend to fluctuate more than the other age bands.
 - LFPR for older workers (55-64 and 65) seemed to have experienced a steep increase in 2011.
