--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -1,14 +1,13 @@
 ---
-title: "Welcome to Data Discovery"
+title: "Welcome to my visual analytics blog"
 description: |
-  Welcome to our new blog, Data Discovery We hope you enjoy 
-  reading what we have to say!
+  Welcome to my analytics journey. Follow me on my journey to discover the wonders of visual analytics.
 author:
   - name: Ang Su Yiin 
-    url: https://github.com/suyiinang
-    affiliation: Singapore Management University
-    affiliation_url: https://www.smu.edu.sg/
+    url: https://public.tableau.com/profile/suyiinang#!/
 date: 01-04-2021
+categories:
+  - welcome
 output:
   distill::distill_article:
     self_contained: false
