--- a/about.Rmd
+++ b/about.Rmd
@@ -9,10 +9,10 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 ## About me
-I am a post-graduate student pursuing a masters of IT in Business (Analytics) at Singapore Management University.
+I am a post-graduate student pursuing a [Master of IT in Business (Analytics)](https://scis.smu.edu.sg/master-it-business) at Singapore Management University.
 
-Before venturing into the beautiful world of analytics, I spent 6 years in the auditing and financial due diligence department at PwC Singapore. 
+Before venturing into the world of analytics, I spent 6 years in the auditing and financial due diligence department at PwC Singapore. 
 
 
 ## About this blog
-This blog is dedicated to showcase my assignments and project work relating to the Visual Analytics course (ISSS608) at Singapore Management University.
+This blog is dedicated to showcase my assignments and project work relating to the Visual Analytics and Applications course (ISSS608) at Singapore Management University.
