--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Welcome to my visual analytics journal"
+title: "Welcome to my DataViz journal"
 description: |
-  Welcome to my visual analytics journal Follow me on my journey to discover the wonders of visual analytics.
+  Welcome! Follow me on my pursuit for beautiful and meaningful charts.
 author:
   - name: Ang Su Yiin 
     url: https://public.tableau.com/profile/suyiinang#!/
