--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -3,7 +3,7 @@ title: "Welcome to my DataViz journal"
 description: |
   Welcome! Follow me on my pursuit for beautiful and meaningful charts.
 author:
-  - name: Ang Su Yiin 
+  - name: Su Yiin Ang
     url: https://public.tableau.com/profile/suyiinang#!/
 date: 01-04-2021
 categories:
