--- a/_posts/2021-01-26-dataviz-makeove-1/dataviz-makeove-1.Rmd
+++ b/_posts/2021-01-26-dataviz-makeove-1/dataviz-makeove-1.Rmd
@@ -28,7 +28,7 @@ For my first DataViz makeover, I have used data from the [Ministry of Manpower o
 ![:scale 60%](images/fig1.png)
 *Figure 1: Chart 6 of Labour Force in Singapore 2019 report (page 22)*
 
-Before making over the selected visualisation, it is important to have a clear understanding of the context of the visualisation and its key takeaway which is depend on:  
+Before making over the selected visualisation, it is important to have a clear understanding of the context of the visualisation and its key takeaways which are dependent on:  
 - **Who**: [Individuals, businesses and primarily policy-makers, to help improve the well-being and optimisation of workers.](https://stats.mom.gov.sg/Pages/Labour-Force-In-Singapore-2019.aspx)  
 - **What**: Understanding the shift in Singapore’s labour force from the respective age bands over the past 10 years (2009 to 2019).  
 -	**How**: Showing that labour force distribution and participation rate of older workers (55 and over) has increased, which resulted in the increase in labour force’s median age.
@@ -39,9 +39,9 @@ Before making over the selected visualisation, it is important to have a clear u
 ::: l-page
 |S/N | Critiques                     | Comments             |
 |----|-------------------------------|----------------------|
-|1   | **Chart title is not precise** – The title *“Resident labour force by age”* does not prepare the reader for the main takeaway which is “the increase in median age of labour force” the chart refers to the distribution of the resident labour force by age and is accompanied by a rather convoluted commentary on labour force participation rate (LFPR) of the different age bands and share of resident’s labour force, making it difficult to grasp the main message quickly. | **Change title** to “The shift in Singapore’s labour force distribution and participation rate by age from 2009 to 2019”. |
+|1   | **Chart title is not precise** – The title *“Resident labour force by age”* does not drive the message of “the increase in median age of labour force”. The chart refers to the share of labour force and is accompanied by a rather convoluted commentary on labour force participation rate (LFPR) of the different age bands and share of resident’s labour force, making it difficult to grasp the main message quickly. | **Change title** to “The shift in Singapore’s labour force distribution and participation rate by age from 2009 to 2019”. |
 |2   | **Figures per commentary and chart are inconsistent** - The commentary quoted percentages that are aggregates of several age bands (i.e 25 to 54), while the chart uses 5-year intervals (i.e 25 to 29, 30 to 34, etc). This inconsistency hinders cross referencing between commentary and table. | Keep both **consistent**. Age bands must match for both chart and commentary. |
-|3   | **Axis title not properly labelled** – ‘Per Cent’ was labelled below the chart title, but not on the y axis. Age band not labelled on x-axis. Not labelling leaves room for misinterpretation and/or requires reader’s extra time to peruse the chart, all of which draws attention away from the main message. | It would be clearer and more quickly understood to the reader if both the **y-axis** and **figures** were **appropriately labelled**. |
+|3   | **Axis title not properly labeled** – ‘Share of labour force' was not labeled on the y axis. This leaves room for misinterpretation and/or requires reader’s extra time to peruse the chart, all of which draws attention away from the main message. | It would be clearer and more quickly understood to the reader if both the **y-axis** was **appropriately labeled**. |
 :::
 
 ### 2.2 Aesthetics
@@ -54,7 +54,7 @@ Before making over the selected visualisation, it is important to have a clear u
 |6   | **Line chart may not be the most appropriate chart** – From the chart, the reader can clearly see that there is an increase in percentage for those 55+, but the reader has to cross reference to the table below to get an idea of how much it declined by. Furthermore, it is difficult to see which age band increased/decreased the most. | Given that the main message is to highlight the significant increase and decrease in share of labour by the respective age groups, leading to the increase in median age, a more appropriate graph would be a **stacked bar chart**. |
 |7   | **Figures in table are redundant**- It is redundant to include all the figures in the table – why make the chart in the first place if one need to reads all the numbers in the table to understanding it. |	Remove table – only **showcase key figures** to drive the main idea.|
 |8   | **Median age label clutters**- too long, distracting and clutters the graph. | Remove median age label. Since there are only two text, **include these figures into the commentary**. |
-|9   | **The heavy shading of the table competes for attention.** The table is meant to support the main message hence shading should be kept minimal.Furthermore, the monotone shading does not add value (unlike a heat map which showcases the increase/decrease trends in values). | **Remove shading**. Colour should always be intentional - use shading only to highlight key figures. |
+|9   | **The heavy shading of the table competes for attention.** The table is meant to support the main message hence shading should be kept minimal. Furthermore, the monotone shading does not add value (unlike a heat map which showcases the increase/decrease trends in values). | **Remove shading**. Colour should always be intentional - use shading only to highlight key figures. |
 |10  | **Different alignments for source and notes** make the whole visualisation look disorganised. |	**Align** these two either to the left or right to establish sense of unity and cohesion. |
 :::
 
@@ -254,3 +254,5 @@ Figure 17: Dashboard
 - LFPR for older workers (55-64 and 65) seemed to have experienced a steep increase in 2011.
 - The shift in labour force’s distribution is mainly due to shift from the 25-54 age band to the 55-64 and 65+ age band. While the share of labour force for the 15 -24 age band was quite stable (8-9%) across the 10 years.
 - Given that the financial crisis happened in 2008/2009, 2009 may not give the best numbers to use as a base comparison as is it historically lower compared to other years. As such, the increase in participation of old workers may be due to workers re-joining the workforce as the economy recovers, of which leads to the shift in the share of labour force towards older workers.
+
+
